# dlibfacemarker

./: .gitignore  CMakeLists.txt  Dockerfile  Package.swift  README.md  build-linux.sh  build.sh  dlibfacemarker.cpp  dlibfacemarker.h  docker-compose.yml  install-linux.sh  install.sh  libdlibfacemarker.pc  module.modulemap  prebuild.sh
Facemarker/Tests/: LinuxMain.swift
Sources/dlibfacemarker/: module.modulemap
Tests/: LinuxMain.swift
Tests/dlibfacemarkerTests/: XCTestManifests.swift  dlibfacemarkerTests.swift
